--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <h1>Hello JAMStack Testing World</h1>
-  <p>Host: Netlify #Static but with CI & CD</p>
-  <p>CDN: Netlify ADN</p>
+  <p>Host: Netlify #Static</p>
+  <p>CDN: Netlify ADN with CI & CD</p>
   <p>DNS: CloudFlare</p>
 </body>
 </html>
