Update DNS record!

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <h1>Hello JAMStack Testing World</h1>
   <p>Host: Netlify #Static</p>
   <p>CDN: Netlify ADN with CI & CD</p>
-  <p>DNS: CloudFlare</p>
+  <p>DNS: NS One & Netlify DNS</p>
 </body>
 </html>
